--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <section id="game-start" class="screen ">
+  <section id="game-start" class="screen is-open">
     <h1>Welcome to the country game</h1>
     <p>The goal is to find the good Flag</p>
     <button class="btn">Start</button>
