--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <main id="game" class="is-active">
     <header>
-      <div class="lives">
-        <img src="like.svg">
-        <img src="like.svg">
-        <img src="like.svg">
+      <div class="lives is-active">
+        <img class="img1" src="like.svg">
+        <img class="img1" src="like.svg">
+        <img class="img1" src="like.svg">
       </div>
 
       <h1>Countries</h1>
